kubernetes/image-upload-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-upload-service
  namespace: image-upload
spec:
  selector:
    app: image-upload
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
