kubernetes/image-upload-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-upload
  namespace: image-upload
spec:
  ingressClassName: nginx
  rules:
  #host: imageupload.plantic.xyz 
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: image-upload-service
            port:
              number: 80
